<resources>
    <string name="app_name">Self-MIEnd</string>
    <string name="app_icon">Self-MIEnd Icon</string>
    <string name="app_tagline">Guiding Your Path to\nMental Wellness</string>
    <string name="app_name2">Self-Mind, Self-Mend</string>
    <string name="app_startBtn">START</string>
    <string name="abt_hey">Hey There!</string>
    <string name="abt_intro">Self MIEnd is your personal companion on the journey to mental health and well-being. The application allows you to engage in a self-discovery process, providing a safe and supportive environment for self-reflection and personal growth. We provide self-assessment tests for common mental health problems for you to evaluate your mental well-being and determine whether professional help may be necessary.\n\n We also got you some activities and tips to try!</string>
    <string name="app_contBtn">Continue</string>
    <string name="app_backBtn">Back</string>
    <string name="home_title">Select Activity</string>
    <string name="home_testBtn">Tests</string>
    <string name="home_actBtn">Activities to Try</string>
    <string name="tests_title">Select a Test</string>
    <string name="stressTest_title">Stress</string>
    <string name="internet_addictionTest_title">Internet\nAddiction</string>
    <string name="depressionTest_title">Depression</string>
    <string name="anxietyTest_title">Anxiety</string>
    <string name="test_text">Test</string>
    <string name="test_question">Loading Question&#8230;</string>
    <string name="greeting_title">How\'s it going?</string>
    <string name="test_result_title">Test Result</string>
    <string name="test_result_scoreText">Score:</string>
    <string name="test_result_severity_levelText">Severity Level:</string>
    <string name="temp_score">0</string>
    <string name="temp_level">Minimal</string>
    <string name="hotline_caption">Experiencing emotional hurdles?</string>
    <string name="hotline_call">Click to Find Support</string>
    <string name="backText">Back</string>
    <string name="nextText">Next</string>
    <string name="loading_questionText">Loading Question&#8230;</string>
    <string name="done_button">Done</string>
    <string name="act_try">Activities\nto Try</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="title_activities_tips_for_mental_well_being"><![CDATA[Tips for Mental Well-being]]></string>
    <string name="self_care_for_mental_wellness">Over-all Self-care</string>
    <string name="thankyou_message">Your wellness journey matters. Thank you!</string>
    <string name="done_question">Would you like to try the other Tests and Activities?</string>
    <string name="exitButton">Exit</string>
    <string name="several_days">Several Days</string>
    <string name="not_at_all">Not at all</string>
    <string name="more_than_half_the_days">More Than Half The Days</string>
    <string name="moderately">Moderately</string>
    <string name="a_little_bit">A Little Bit</string>
    <string name="quite_a_bit">Quite A Bit</string>
    <string name="extremely">Extremely</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="rarely">Rarely</string>
    <string name="occasionally">Occasionally</string>
    <string name="often">Often</string>
    <string name="always">Always</string>
    <string name="nearly_every_day">Nearly Every Day</string>
    <string name="self_care_tips_activities"><![CDATA[Self-Care Tips & Activities]]></string>
    <string name="for_specific_areas">For specific areas:</string>
    <string name="greetings">Time for a quick mental health check! Take a moment to reflect on your well-being. If you\'ve taken any assessments, we\'re here to discuss the results and provide support and guidance.</string>
    <string name="cancel">Cancel</string>
    <string name="anxiety_test_text">Anxiety Test</string>
    <string name="depression_test_text">Depression Test</string>
    <string name="stress_test_text">Stress Test</string>
    <string name="internet_addiction_test_text">Internet Addiction Test</string>
    <string name="frequently">Frequently</string>
    <string name="display_score_label">%d</string>
    <string name="tip_title_1">1. Practice Mindfulness Meditation:\n</string>
    <string name="tip_title_2">2. Establish a Routine:\n</string>
    <string name="tip_title_3">3. Stay Connected:\n</string>
    <string name="tip_title_4">4. Exercise Regularly:\n</string>
    <string name="tip_title_5">5. Set Realistic Goals:\n</string>
    <string name="tip_title_6">6. Limit Screen Time:\n</string>
    <string name="tip_title_7">7. Prioritize Sleep:\n</string>
    <string name="tip_title_8">8. Express Yourself Creatively:\n</string>
    <string name="tip_title_9">9. Learn to Say No:\n</string>
    <string name="tip_title_10">10. Practice Gratitude:\n</string>
    <string name="tip_title_11">11. Seek Professional Support:\n</string>
    <string name="tip_title_12">12. Engage in Hobbies:\n</string>
    <string name="tip_title_13">13. Take Breaks:\n</string>
    <string name="tip_title_14">14. Practice Self-Compassion:\n</string>
    <string name="tip_desc_1"><![CDATA[
    • Set aside a few minutes each day to practice mindfulness meditation.\n
    • Focus on your breath and bring your attention to the present moment.\n
    • Apps like Headspace or Calm can guide you through meditation sessions.\n
]]></string>
    <string name="tip_desc_2"><![CDATA[
    • Create a daily schedule that includes regular sleep, meals, and breaks.\n
    • Consistent routines can provide a sense of stability and predictability.\n
]]></string>
    <string name="tip_desc_3"><![CDATA[
    • Maintain relationships with friends and family.\n
    • Schedule regular social activities, even if they&apos;re virtual, to stay connected.\n
]]></string>
    <string name="tip_desc_4"><![CDATA[
    • Engage in physical activities you enjoy, such as walking, jogging, or yoga.\n
    • Exercise releases endorphins, which can improve your mood.\n
]]></string>
    <string name="tip_desc_5"><![CDATA[
    • Break down large tasks into smaller, manageable goals.\n
    • Celebrate your achievements, no matter how small.\n
]]></string>
    <string name="tip_desc_6"><![CDATA[
    • Set boundaries for your screen time, especially on social media.\n
    • Allocate time for activities that don&apos;t involve screens, like reading or outdoor pursuits.\n
]]></string>
    <string name="tip_desc_7"><![CDATA[
    • Ensure you get enough restful sleep each night.\n
    • Create a calming bedtime routine to signal to your body that it&apos;s time to wind down.\n
]]></string>
    <string name="tip_desc_8"><![CDATA[
    • Engage in creative activities such as writing, drawing, or playing an instrument.\n
    • Expressing yourself creatively can be therapeutic.\n
]]></string>
    <string name="tip_desc_9"><![CDATA[
    • Set boundaries and learn to say no when you need to.\n
    • Prioritize your well-being by not overcommitting.\n
]]></string>
    <string name="tip_desc_10"><![CDATA[
    • Keep a gratitude journal to reflect on positive aspects of your life.\n
    • Focus on the things you&apos;re thankful for, no matter how small.\n
]]></string>
    <string name="tip_desc_11"><![CDATA[
    • If needed, don&apos;t hesitate to reach out to a mental health professional.\n
    • Therapy or counseling can provide valuable tools for managing stress and challenges.\n
]]></string>
    <string name="tip_desc_12"><![CDATA[
    • Spend time doing things you love, whether it&apos;s gardening, painting, or playing a sport.\n
    • Hobbies can bring joy and fulfillment to your life.\n
]]></string>
    <string name="tip_desc_13"><![CDATA[
    • Incorporate short breaks into your day to rest and recharge.\n
    • Step away from work or stressful situations to clear your mind.\n
]]></string>
    <string name="tip_desc_14"><![CDATA[
    • Be kind to yourself and recognize that everyone makes mistakes.\n
    • Treat yourself with the same kindness and understanding you would offer a friend.\n
]]></string>
    <string name="selfcare_desc">Taking care of your mental well-being is crucial for overall health and happiness. Here are some selfcare activities and tips that can contribute to your mental well-being:</string>
    <string name="disclaimer"><![CDATA[The information and tools provided by this mobile application are for informational purposes only and should not be construed as medical advice or a substitute for professional mental health care. The results of any self-assessment tools should not be used to diagnose or treat any mental health condition.\n
\n
Please note that:\n
\n
The self-assessment tools in this app are not 100% accurate and may not detect all mental health conditions.
The information provided in this app is not intended to be a complete overview of mental health and may not address all of your questions or concerns.
If you are experiencing a mental health crisis, please call a suicide hotline or go to the nearest emergency room.\n
\nWe encourage you to use this app as a starting point for learning more about mental health.
Talk to your doctor or a mental health professional if you have any concerns about your mental health.
Take care of yourself and seek help if you need it.
\n\n
Thank you for using our app. We hope that it helps you on your journey to better mental health.
]]></string>
    <string name="anxietyR1">Minimal Anxiety</string>
    <string name="anxietyR2">Mild Anxiety</string>
    <string name="anxietyR3">Moderate Anxiety</string>
    <string name="anxietyR4">Severe Anxiety</string>
    <string name="depressionR1">Minimal Depression</string>
    <string name="tast1">Deep Breathing\n</string>
    <string name="tast2">Regular Exercise\n</string>
    <string name="tast3">Healthy Diet\n</string>
    <string name="tast4">Mindfulness and Meditation\n</string>
    <string name="tast5">Get Enough Sleep\n</string>
    <string name="tast6">Limit Exposure to Stress\n</string>
    <string name="tast7">Seek Support\n</string>
    <string name="tast8">Set Realistic Goals\n</string>
    <string name="tast9">Time Management\n</string>
    <string name="tast10">Limit Media Consumption\n</string>
    <string name="tasd1">Practice deep breathing exercises to calm your nervous system and reduce anxiety.\n</string>
    <string name="tasd2">Engage in regular physical activity as it helps in reducing stress and anxiety.\n</string>
    <string name="tasd3">Maintain a balanced diet and limit caffeine and sugar intake, as they can contribute to anxiety.\n</string>
    <string name="tasd4">Practice mindfulness techniques or meditation to ground yourself in the present moment and reduce anxiety.\n</string>
    <string name="tasd5">Ensure you get adequate sleep as lack of sleep can exacerbate anxiety.\n</string>
    <string name="tasd6">Ensure you get adequate sleep as lack of sleep can exacerbate anxiety.\n</string>
    <string name="tasd7">Talk to someone you trust, a friend, family member, or therapist, about your feelings and worries.\n</string>
    <string name="tasd8">Break down tasks into manageable steps to reduce overwhelming feelings.\n</string>
    <string name="tasd9">Organize your time effectively to reduce stress caused by feeling rushed or overwhelmed.\n</string>
    <string name="tasd10">Reduce exposure to distressing news or social media if it tends to increase your anxiety.\n</string>
    <string name="at_desc">Discover simple, effective strategies to ease anxiety and boost your well-being. From quick calming exercises to practical tips, we\'ve got your back on the path to a more relaxed you.</string>
    <string name="anxiety_management_tips">Anxiety Management Tips</string>
</resources>