<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    tools:context=".TipsAnxietyFragment">

    <TextView
        style="@style/SubheadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/anxiety_management_tips"
        android:textColor="@color/lapis_lazuli"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/at_desc"
        android:textAlignment="textStart"
        android:textColor="@color/darker_blue_violet2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToActsAndTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/customized_buttons"
        android:backgroundTint="@color/light_green"
        android:text="@string/backText"
        android:textColor="@color/lapis_lazuli"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/backToActsAndTips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast1"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd1"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast2"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd2"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast3"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd3"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast4"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd4"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast5"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd5"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast6"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd6"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast7"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd7"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast8"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd8"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast9"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd9"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:text="@string/tast10"
                android:textAlignment="viewStart"
                android:textColor="@color/verdigris"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:lineSpacingExtra="6sp"
                android:text="@string/tasd10"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>