<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTestFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tests_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/stressTest"
         style="@style/SubheadingText"
         android:layout_width="279dp"
         android:layout_height="105dp"
         android:layout_marginBottom="88dp"
         android:text="@string/stressTest_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />

     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/internetAddictionTest"
         style="@style/SubheadingText"
         android:layout_width="279dp"
         android:layout_height="105dp"
         android:layout_marginBottom="44dp"
         android:text="@string/internet_addictionTest_title"
         app:layout_constraintBottom_toTopOf="@+id/stressTest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/depressionTest"
         app:layout_constraintVertical_bias="1.0" />

     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/depressionTest"
         style="@style/SubheadingText"
         android:layout_width="279dp"
         android:layout_height="105dp"
         android:layout_marginBottom="360dp"
         android:text="@string/depressionTest_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />

     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/anxietyTest"
         style="@style/SubheadingText"
         android:layout_width="279dp"
         android:layout_height="105dp"
         android:text="@string/anxietyTest_title"
         app:layout_constraintBottom_toTopOf="@+id/depressionTest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>